# Factorial-MPI

./: CMakeLists.txt  README.md  main.cpp
solver/: CMakeLists.txt  Factorial.cpp  Factorial.h
tests/: CMakeLists.txt  main.cpp  run_tests.sh
utils/: CMakeLists.txt  Debug.cpp  Debug.h  Macros.h  Utils.cpp  Utils.h
